--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon --watch server --inspect ./server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.22"
   }
 }
