--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server --inspect ./server/index.js"
+    "start": "nodemon --watch server --inspect ./server/index.js",
+    "prod": "node ./server/index.js"
   },
   "keywords": [],
   "author": "",
